[package]
name = "yds-game-miniquad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui-macroquad = "0.15.0"
image = "0.24.7"
macroquad = "0.4.0"
miniquad = { version = "=0.4.0-alpha.10", features = ["log-impl"] }
